scripts/kube/lb-airflow-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: airflow
spec:
  type: LoadBalancer
  ports:
    - port: 8080
  selector:
    name: airflow
